syntax = "proto3";

package api;

option go_package = "./";

service Moderator {
    rpc PromoteToModerator(ModeratorRequest) returns (ModeratorResponse) {}
    rpc DemoteToUser(ModeratorRequest) returns (ModeratorResponse) {}
}

message ModeratorRequest {
    int32 participantId = 1;
}

message ModeratorResponse {
    uint32 id = 1;
    string name = 2;
    string email = 3;
    string password = 4;
    uint32 status = 5;
    uint32 role = 6;
    string avatar = 7;
}
